<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="12dp"
    android:weightSum="1">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/now_playing"
        android:textAlignment="center"
        style="@style/CustomTextMedium"/>


            <ImageView
                android:id="@+id/artist_image"
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:background="@color/colorPrimary"
                android:layout_height="0dp"
                android:layout_gravity="center"/>



            <TextView
                android:id="@+id/player_activity_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomTextSmall"
                android:layout_marginBottom="24dp"
                android:textAlignment="center"/>



    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_margin="24dp"
        android:layout_height="wrap_content"
       />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:src="@drawable/pause_button"/>

    <Button
        android:id="@+id/add_to_playlist_button"
        style="@style/CustomTextMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_to_my_collection" />

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:orientation="horizontal"

    android:weightSum="1">
    <Button
        android:id="@+id/go_to_playlist_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/go_to_my_collection"/>

    <Button
        android:id="@+id/upgrade_button"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/subscribe_pop_music123"/>
</LinearLayout>

    <Button
        android:id="@+id/back_to_home_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"/>



</LinearLayout>
